별개 버튼 추가 + 그 버튼의 이벤트 처리

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         android:text="로그 확인용 버튼 1"/>
 
+    <Button
+        android:id="@+id/logBtn02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="로그 확인 버튼 2"
+
 
 
 </LinearLayout>
