--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,12 @@
         android:layout_height="wrap_content"
         android:text="로그 확인 버튼 2" />
 
+    <Button
+        android:id="@+id/toastBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="토스트 띄우기" />
+
 
 
 </LinearLayout>
